--- a/.github/workflows/actions/setup-ec2-linux/action.yml
+++ b/.github/workflows/actions/setup-ec2-linux/action.yml
@@ -31,9 +31,7 @@ runs:
         AWS_DEFAULT_REGION: us-east-1
       run: |
         AWS_ACCOUNT_ID=$(aws sts get-caller-identity|grep Account|cut -f4 -d\")
-        retry () {
-            "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@")
-        }
+        retry () { "$@"  || (sleep 1 && "$@") || (sleep 2 && "$@") }
         retry aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS \
             --password-stdin "$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com"
     - name: "[FB EMPLOYEES] Enable SSH (Click me for login details)"
