--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -30,10 +30,10 @@ jobs:
   docs:
     name: docs
     uses: ./.github/workflows/_docs.yml
-    needs: [linux-xenial-py3_7-gcc5_4]
+    needs: linux-xenial-py3_7-gcc5_4
     with:
-      build-environment: ${{ needs.linux-xenial-py3_7-gcc5_4.inputs.build-environment }}
-      docker-image-base: ${{ needs.linux-xenial-py3_7-gcc5_4.inputs.docker-image-base }}
+      build-environment: linux-xenial-py3.7-gcc5.4
+      docker-image-base: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-xenial-py3.7-gcc5.4
       push: false
 
   linux-xenial-cuda11_3-py3_7-gcc7:
