--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -633,6 +633,7 @@ if(NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
     list(APPEND Caffe2_CPU_SRCS
       ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/LlgaTensorImpl.cpp
       ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/graph_fuser.cpp
+      ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/graph_rewriter.cpp
       ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/graph_helper.cpp
       ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/register_interface.cpp
       ${TORCH_SRC_DIR}/csrc/jit/codegen/onednn/interface.cpp
