--- a/.circleci/verbatim-sources/header-section.yml
+++ b/.circleci/verbatim-sources/header-section.yml
@@ -31,6 +31,12 @@ executors:
       resource_class: windows.xlarge
       image: windows-server-2019-vs2019:stable
       shell: bash.exe
+  
+  windows-2xlarge-cpu-with-nvidia-cuda:
+    machine:
+      resource_class: windows.2xlarge
+      image: windows-server-2019-vs2019:stable
+      shell: bash.exe
 
   windows-medium-cpu-with-nvidia-cuda:
     machine:
