Use xlarge linux for pytorch build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,6 +439,7 @@ promote_common: &promote_common
 jobs:
   pytorch_linux_build:
     <<: *pytorch_params
+    resource_class: "xlarge"
     machine:
       image: ubuntu-2004:202104-01
     steps:
