--- a/.circleci/verbatim-sources/job-specs/pytorch-job-specs.yml
+++ b/.circleci/verbatim-sources/job-specs/pytorch-job-specs.yml
@@ -1,6 +1,7 @@
 jobs:
   pytorch_linux_build:
     <<: *pytorch_params
+    resource_class: "xlarge"
     machine:
       image: ubuntu-2004:202104-01
     steps:
