--- a/test/mobile/custom_build/CMakeLists.txt
+++ b/test/mobile/custom_build/CMakeLists.txt
@@ -35,10 +35,13 @@ add_executable(test_codegen_unboxing
   ${TEST_ROOT}/test_lightweight_dispatch.cpp
 )
 
+target_include_directories(test_codegen_unboxing PUBLIC ${TORCH_INCLUDE_DIRS})
+target_include_directories(test_codegen_unboxing PRIVATE ${ATen_CPU_INCLUDE} lib)
+
 target_compile_definitions(test_codegen_unboxing PRIVATE USE_GTEST)
 
 # set(TEST_UNBOXING_DEPENDENCIES ${TORCH_LIBRARIES})
-set(TEST_UNBOXING_DEPENDENCIES torch gtest)
+set(TEST_UNBOXING_DEPENDENCIES torch gtest ${TORCH_LIBRARIES})
 
 target_link_libraries(test_codegen_unboxing
   ${LINKER_OPTIONS}
@@ -46,8 +49,6 @@ target_link_libraries(test_codegen_unboxing
   Threads::Threads
   ${CMAKE_DL_LIBS}
 )
-
-target_include_directories(test_codegen_unboxing PRIVATE ${ATen_CPU_INCLUDE})
 
 if(INSTALL_MOBILE_TEST)
   install(TARGETS test_codegen_unboxing DESTINATION bin)
