--- a/.circleci/verbatim-sources/build-parameters/pytorch-build-params.yml
+++ b/.circleci/verbatim-sources/build-parameters/pytorch-build-params.yml
@@ -8,7 +8,7 @@ pytorch_params: &pytorch_params
       default: ""
     resource_class:
       type: string
-      default: "large"
+      default: "xlarge"
     use_cuda_docker_runtime:
       type: string
       default: ""
