Revert "make all pytorch linux jobs xlarge"
This reverts commit 2df667c13c652c232a5cb74c35999dbe82fed28d.

--- a/.circleci/verbatim-sources/build-parameters/pytorch-build-params.yml
+++ b/.circleci/verbatim-sources/build-parameters/pytorch-build-params.yml
@@ -8,7 +8,7 @@ pytorch_params: &pytorch_params
       default: ""
     resource_class:
       type: string
-      default: "xlarge"
+      default: "large"
     use_cuda_docker_runtime:
       type: string
       default: ""
