Update base for Update on "Allow custom registration of shape functions"
[ghstack-poisoned]

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -430,7 +430,7 @@ class AliasDb:
 
 class _InsertPoint:
     def __enter__(self) -> None: ...
-    def __exit__(self, *args) - None: ...
+    def __exit__(self, *args) -> None: ...
 
 # Defined in torch/csrc/jit/ir/ir.h
 class Value:
