--- a/.github/workflows/generated-periodic-win-vs2019-cuda11.1-py3.yml
+++ b/.github/workflows/generated-periodic-win-vs2019-cuda11.1-py3.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           .circleci/scripts/windows_cudnn_install.sh
       - name: Parse ref
+        shell: bash
         id: parse-ref
         run: .github/scripts/parse_ref.py
       - name: Build
@@ -264,6 +265,7 @@ jobs:
         run: |
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
+        shell: bash
         id: parse-ref
         run: .github/scripts/parse_ref.py
       - name: Upload test statistics
@@ -420,6 +422,7 @@ jobs:
         run: |
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
+        shell: bash
         id: parse-ref
         run: .github/scripts/parse_ref.py
       - name: Upload test statistics
