--- a/.github/workflows/generated-linux-xenial-py3.7-gcc7.yml
+++ b/.github/workflows/generated-linux-xenial-py3.7-gcc7.yml
@@ -160,7 +160,7 @@ jobs:
           retry docker pull "${DOCKER_IMAGE}"
       - name: Parse ref
         id: parse-ref
-        run: python3 .github/scripts/parse_ref.py
+        run: python .github/scripts/parse_ref.py
       - name: Build
         env:
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
@@ -346,7 +346,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python3 .github/scripts/parse_ref.py
+        run: python .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -592,7 +592,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python3 .github/scripts/parse_ref.py
+        run: python .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -838,7 +838,7 @@ jobs:
           sudo df -H
       - name: Parse ref
         id: parse-ref
-        run: python3 .github/scripts/parse_ref.py
+        run: python .github/scripts/parse_ref.py
       - name: Test
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
