--- a/.github/workflows/generated-win-vs2019-cpu-py3.yml
+++ b/.github/workflows/generated-win-vs2019-cpu-py3.yml
@@ -88,7 +88,7 @@ jobs:
           .\.circleci\scripts\vs_install.ps1
       - name: Parse ref
         id: parse-ref
-        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
+        run: .github/scripts/parse_ref.py
       - name: Build
         shell: bash
         env:
@@ -250,7 +250,7 @@ jobs:
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
         id: parse-ref
-        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
+        run: .github/scripts/parse_ref.py
       - name: Upload test statistics
         if: always()
         env:
@@ -398,7 +398,7 @@ jobs:
           .github\scripts\kill_active_ssh_sessions.ps1
       - name: Parse ref
         id: parse-ref
-        run: echo $GITHUB_REF && .github/scripts/parse_ref.py
+        run: .github/scripts/parse_ref.py
       - name: Upload test statistics
         if: always()
         env:
