--- a/test/mobile/lightweight_dispatch/CMakeLists.txt
+++ b/test/mobile/lightweight_dispatch/CMakeLists.txt
@@ -1,18 +1,25 @@
+cmake_minimum_required(VERSION 3.1)
+
 set(TORCH_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../..)
 set(TEST_ROOT ${TORCH_ROOT}/test/mobile/lightweight_dispatch)
 
 add_executable(test_codegen_unboxing
-  ${TORCH_ROOT}/test/cpp/common/main.cpp
   ${TEST_ROOT}/test_lightweight_dispatch.cpp
 )
 
-target_include_directories(test_codegen_unboxing PUBLIC ${TORCH_INCLUDE_DIRS})
 target_include_directories(test_codegen_unboxing PRIVATE ${ATen_CPU_INCLUDE})
 
 target_compile_definitions(test_codegen_unboxing PRIVATE USE_GTEST)
 
 # set(TEST_UNBOXING_DEPENDENCIES ${TORCH_LIBRARIES})
-set(TEST_UNBOXING_DEPENDENCIES torch gtest ${TORCH_LIBRARIES})
+set(TEST_UNBOXING_DEPENDENCIES torch gtest gtest_main ${TORCH_LIBRARIES})
+
+# Avoid linker flags on Mac
+if(${APPLE})
+  set(LINKER_OPTIONS "")
+else()
+  set(LINKER_OPTIONS "-Wl,-s -Wl,--gc-sections -Wl,--whole-archive -Wl,--no-whole-archive")
+endif()
 
 target_link_libraries(test_codegen_unboxing
   ${LINKER_OPTIONS}
