Update on "DO NOT MERGE< testing windows conda"
Signed-off-by: Eli Uriegas <eliuriegasfb.com>

[ghstack-poisoned]

--- a/.github/workflows/generated-windows-binary-conda.yml
+++ b/.github/workflows/generated-windows-binary-conda.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -188,7 +188,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -389,7 +389,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -488,7 +488,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -690,7 +690,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -789,7 +789,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -990,7 +990,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1088,7 +1088,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1289,7 +1289,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1388,7 +1388,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1590,7 +1590,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1689,7 +1689,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1890,7 +1890,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1988,7 +1988,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2189,7 +2189,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2288,7 +2288,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2490,7 +2490,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2589,7 +2589,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2790,7 +2790,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2888,7 +2888,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3089,7 +3089,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3188,7 +3188,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3390,7 +3390,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3489,7 +3489,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: main
+          ref: cygpath_for_conda
           submodules: recursive
           repository: pytorch/builder
           path: builder
