[PyTorch][Static Runtime] out variant for _s_where
`aten::where` has no out variant in PyTorch core, and writing one is pretty tricky because it's split into `where` and `_s_where` to make autograd stuff easier ([ref](https://github.com/pytorch/pytorch/blob/master/aten/src/ATen/native/native_functions.yaml#L4773)).

This diff implements the `where` out variant for static runtime as follows:

* Added an out variant for `_s_where` in PyTorch
* Added a static runtime implementation for `where_out` that duplicates a small amount of broadcasting logic. This function looks a lot like `where` in PyTorch, but it's slightly more efficient - static runtime can skip the device check, since we take it as given that all tensors are on CPU. We can also skip a round of dispatch by directly calling `at::cpu::_s_where_out` instead of `at::_s_where_out`.

Differential Revision: [D34469785](https://our.internmc.facebook.com/intern/diff/D34469785/)

**NOTE FOR REVIEWERS**: This PR has internal Facebook specific changes or comments, please review them on [Phabricator](https://our.internmc.facebook.com/intern/diff/D34469785/)!

[ghstack-poisoned]

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -4792,6 +4792,12 @@
 
 - func: _s_where(Tensor condition, Tensor self, Tensor other) -> Tensor
   variants: function
+  structured_delegate: _s_where.out
+
+- func: _s_where.out(Tensor condition, Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
+  variants: function
+  structured: True
+  structured_inherits: TensorIteratorBase
   dispatch:
     CPU, CUDA: _s_where
 
