[PyTorch] Add back link options

--- a/test/mobile/lightweight_dispatch/CMakeLists.txt
+++ b/test/mobile/lightweight_dispatch/CMakeLists.txt
@@ -16,6 +16,8 @@ set(TEST_UNBOXING_DEPENDENCIES torch gtest gtest_main ${TORCH_LIBRARIES})
 
 target_link_libraries(test_codegen_unboxing
   -Wl,-s
+  -Wl,--gc-sections
+  -Wl,--whole-archive
   ${TEST_UNBOXING_DEPENDENCIES}
 )
 
