use TORCH_CUDA_CPP_API with TunableContext, expose python module

--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1880,6 +1880,22 @@ def _nccl_reduce_scatter(
     comms: Optional[Sequence[object]],
 ) -> None: ...
 def _rocm_is_backward_pass() -> _bool: ...
+def _cuda_tunableop_enable(val: _bool) -> None: ...
+def _cuda_tunableop_is_enabled() -> _bool: ...
+def _cuda_tunableop_tuning_enable(val: _bool) -> None: ...
+def _cuda_tunableop_tuning_is_enabled() -> _bool: ...
+def _cuda_tunableop_set_max_tuning_duration(duration: _int) -> None: ...
+def _cuda_tunableop_get_max_tuning_duration() -> _int: ...
+def _cuda_tunableop_set_max_tuning_iterations(iterations: _int) -> None: ...
+def _cuda_tunableop_get_max_tuning_iterations() -> _int: ...
+def _cuda_tunableop_set_max_warmup_duration(duration: _int) -> None: ...
+def _cuda_tunableop_get_max_warmup_duration() -> _int: ...
+def _cuda_tunableop_set_max_warmup_iterations(iterations: _int) -> None: ...
+def _cuda_tunableop_get_max_warmup_iterations() -> _int: ...
+def _cuda_tunableop_set_filename(filename: str) -> None: ...
+def _cuda_tunableop_get_filename() -> str: ...
+def _cuda_tunableop_get_results() -> Tuple[str, str, str, _float]: ...
+def _cuda_tunableop_get_validators() -> Tuple[str, str]: ...
 
 class _CudaDeviceProperties:
     name: str
